Important changes since GBBopen 0.9.8:

  * New NEXT-CLASS-INSTANCE-NUMBER function

  * Handler-forms (evaluated in the dynamic context of the error) and new
    ERROR-CONDITION lexical function added to WITH-ERROR-HANDLING

  * CHANGE-CLASS support to/from non-unit instances

Important changes in GBBopen 0.9.8:

  * INCOMPATIBLE CHANGE: New DELETE-BLACKBOARD-REPOSITORY function
    replaces typical uses of RESET-GBBOPEN:
    - RESET-GBBOPEN now unconditionally deletes/resets all instances,
      event functions, and event printing

  * New :RETAIN class option in DEFINE-UNIT-CLASS (and DEFINE-SPACE-CLASS,
    DEFINE-KS-CLASS, and DEFINE-KSA-CLASS), controls default
    DELETE-BLACKBOARD-REPOSITORY behavior on instances of that class:
      nil  = don't retain 
      true = retain (a value of :PROPAGATE indicates propagation of
                     :PROPAGATE retention value (as default) to subclasses)
    - The :RETAIN class option is overridden if DELETE-BLACKBOARD-REPOSITORY
      is invoked with a true :ALL-CLASSES keyword value

  * POTENTIALLY INCOMPATIBLE CHANGE: Queue objects (headers, elements) are now
    unit instances, all queue-management entities have been moved from the
    :GBBOPEN-TOOLS package to the :GBBOPEN package; new Agenda Shell unit
    classes KSA-QUEUE and ORDERED-KSA-QUEUE
    - Any subclasses of ORDERED-QUEUE, QUEUE, and QUEUE-ELEMENT that were
      defined previously to be unit instances should no longer include
      STANDARD-UNIT-INSTANCE in their direct superclasses

  * New :name argument for START-CONTROL-SHELL and RESUME-CONTROL-SHELL


Important changes in GBBopen 0.9.7:

  * Renamed functions:
       ALLOWED-UNIT-CLASSES      -> ALLOWED-UNIT-CLASSES-OF
       SPACE-INSTANCE-CHILDREN   -> CHILDREN-OF
       SPACE-INSTANCE-DIMENSIONS -> DIMENSIONS-OF
       SPACE-INSTANCE-PARENT     -> PARENT-OF
       UNIT-CLASS-DIMENSIONS     -> DIMENSIONS-OF

  * Save & load blackboard repository support; PRINT-OBJECT-FOR-SAVING/SENDING