@@ -17,7 +17,8 @@
 <p><table class="tight" width="100%">
 <tr valign="top"><td valign="baseline" align="left"%>
 <nobr><b><font color="#000000">load-blackboard-repository</font></b></nobr></td><td valign="baseline"> &nbsp; </td><td valign="baseline" align="left" width="99%"><var>pathname</var>
-<code>&#38;key</code> <var>confirm-if-not-empty
+<code>&#38;key</code> <var>class-name-translations
+confirm-if-not-empty
 disable-events 
 external-format
 ignore-after-loading-function
@@ -38,9 +39,8 @@ retain-event-printing</var>
 </p>
 <p><span class="fndoclabel">Arguments</span><table class="tight">
 <tr valign="top"><td valign="baseline"><i>pathname</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id125">pathname&nbsp;designator</a>
-</td></tr><tr valign="top"><td valign="baseline"><i>confirm-if-not-empty</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id75">generalized&nbsp;boolean</a> indicating whether
-the user must confirm loading when the current blackboard repository contains
-<a href="ref-glossary.html#gl:unit-instance">unit&nbsp;instances</a> (default is true)
+</td></tr><tr valign="top"><td valign="baseline"><i>class-name-translations</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> An <a href="ref-glossary.html#id2">association&nbsp;list</a> (default is <code>nil</code>)
+</td></tr><tr valign="top"><td valign="baseline"><i>confirm-if-not-empty</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id75">generalized&nbsp;boolean</a> (default is true)
 </td></tr><tr valign="top"><td valign="baseline"><i>disable-events</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id75">generalized&nbsp;boolean</a> (default is <code>t</code>)
 </td></tr><tr valign="top"><td valign="baseline"><i>external-format</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> An external-file-format designator (default is
 <code>:default</code>)
@@ -71,12 +71,20 @@ to loading:
 </ul>
 </p>
 <p><span class="fndoclabel">Description</span> <br />If <var>pathname</var> does not specify a file type, the type
-<code>bb</code> is added to it.  Then, <code>*default-pathname-defaults*</code> is used to
+<code>bb</code> is added to it.  Then, <code>(user-homedir-pathname)</code> is used to
 supply any missing components to <var>pathname</var>.
 </p>
+<p>The <var>class-name-translations</var> <a href="ref-glossary.html#id2">association&nbsp;list</a>, if specified,
+should contain <a href="ref-glossary.html#gl:conses">conses</a> of the form:<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<tt>(<var>class-name</var> . <var>new-class-name</var>)</tt><br />for any <a href="ref-glossary.html#gl:class">class</a> translations that should occur during repository
+loading.
+</p>
+<p>If <var>confirm-if-not-empty</var> is true, the user must confirm loading when the
+current blackboard repository contains <a href="ref-glossary.html#gl:unit-instance">unit&nbsp;instances</a>.
+</p>
 <p>If <var>ignore-after-loading-function</var> is true, the
-<var>after-loading-function</var> (if specified when the repository was
-saved) is not executed.
+<var>after-loading-function</var> (if one was specified when the repository was
+saved) is not executed.  Otherwise, the <var>after-loading-function</var> is
+executed at the conclusion of repository loading.
 </p>
 <p><span class="fndoclabel">See also</span>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-save-blackboard-repository.html"><b>save-blackboard-repository</b></a>
@@ -103,9 +111,39 @@ and then load a blackboard repository that was saved previously:
 <var>after-loading-function</var>:
 </p>
 <pre>
-  &gt; :tutorial-example :noautorun 
-  &gt; (load-blackboard-repository "tutorial" :ignore-after-loading-function 't)
+  &gt; (load-blackboard-repository "tutorial" 
+      :confirm-if-not-empty nil
+      :ignore-after-loading-function 't)
   #P"/Users/corkill/tutorial.bb"
+</pre>
+<p>Define a new <a href="ref-glossary.html#id181">unit&nbsp;class</a>, <code>new-location</code>, and then load the
+repository again, translating all <code>location</code> <a href="ref-glossary.html#gl:unit-instance">unit&nbsp;instances</a> to
+<code>new-location</code> <a href="ref-glossary.html#gl:unit-instance">unit&nbsp;instances</a>:
+</p>
+<pre>
+  &gt; (define-unit-class new-location (location) ())
+  #&lt;standard-unit-class new-location&gt;
+  &gt; (load-blackboard-repository "tutorial"
+      :class-name-translations '((location . new-location))
+      :confirm-if-not-empty nil)
+  #P"/Users/corkill/tutorial.bb"
+  &gt; :dsbb
+
+  Space Instance                Contents
+  --------------                --------
+  known-world                   54 instances (53 new-location; 1 path)
+
+  Unit Class                    Instances
+  ----------                    ---------
+  control-shell                         1 *
+  ks                                    4 +
+  ksa-queue                             2 +
+  new-location                         53  
+  ordered-ksa-queue                     1 +
+  path                                  1  
+  standard-space-instance               1  
+                                ---------
+                                       63 instances
 </pre>
 <hr /><address><a target="_top" class="address"
     href="http://GBBopen.org/"><p>The GBBopen Project</a></address><br />
