@@ -17,7 +17,7 @@
 <p><table class="tight" width="100%">
 <tr valign="top"><td valign="baseline" align="left"%>
 <nobr><b><font color="#000000">with-reading-saved/sent-objects-block</font></b></nobr></td><td valign="baseline"> &nbsp; </td><td valign="baseline" align="left" width="99%"><code>(</code><var>stream</var> 
-<code>&#38;key</code> <var>readtable read-eval</var><code>)</code>
+<code>&#38;key</code> <var>class-name-translations readtable read-eval</var><code>)</code>
 <var>form</var>*<i> =&gt; </i> <var>result</var>*</td><td valign="baseline" align="right">[<i>Macro</i>]
 </td></tr></table></p>
 <p><span class="fndoclabel">Purpose</span> <br />Bind reader and GBBopen reading-saved/sent-objects control
@@ -30,6 +30,7 @@ reading-saved/sent-objects behavior when evaluating <var>forms</var>.
 </p>
 <p><span class="fndoclabel">Arguments</span><table class="tight">
 <tr valign="top"><td valign="baseline"><i>stream</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A stream
+</td></tr><tr valign="top"><td valign="baseline"><i>class-name-translations</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> An <a href="ref-glossary.html#id2">association&nbsp;list</a> (default is <code>nil</code>)
 </td></tr><tr valign="top"><td valign="baseline"><i>readtable</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A readtable (default is 
 <code>*reading-saved/sent-objects-readtable*</code>)
 </td></tr><tr valign="top"><td valign="baseline"><i>read-eval</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id75">generalized&nbsp;boolean</a> (default is <code>nil</code>)
@@ -47,6 +48,9 @@ reading-saved/sent-objects behavior.  The function
 <b>with-reading-saved/sent-objects-block</b> when loading the
 blackboard repository, and this macro can be used in constructing
 specialized reading-saved/sent-objects operations.
+</p>
+<p>The <var>class-name-translations</var> <a href="ref-glossary.html#id2">association&nbsp;list</a>, if specified,
+should contain <a href="ref-glossary.html#gl:conses">conses</a> of the form:<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<tt>(<var>class-name</var> . <var>new-class-name</var>)</tt><br />for any <a href="ref-glossary.html#gl:class">class</a> translations that should occur during reading.
 </p>
 <p><span class="fndoclabel">See also</span>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-load-blackboard-repository.html"><b>load-blackboard-repository</b></a>
