@@ -42,6 +42,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;March 3, 2008</nobr>
-<nobr>15:12&nbsp;EST</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;March 4, 2008</nobr>
+<nobr>3:22&nbsp;EST</nobr></address><br />
 </body></html>
